# wcl-analytics

./: CMakeLists.txt  TODO
src/: analysis_auras.ixx  analysis_npc_ap.ixx  analysis_npc_swings.ixx  main.cxx  wcl_connection.ixx  wcl_fetcher.ixx
